Sun Nov  1 21:00:06 GMT 1998  Austin Donnelly  <austin@greenend.org.uk>

	* gtk/gtkoptionmenu.c
	* gtk/gtkmenushell.c: make option menus work when some of the
	menuitems are hidden - previously, option menu would popup too
	high.

1998-10-31  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/gtkfeatures.h.in: Remove `#pragma }'.

	* gdk/gdki18n.h: Update to use new `glib' widechar defines.

	* configure.in (CFLAGS): Don't use test -z "echo .. | grep".  Use
	case instead.
	(wchar.h, wctype.h, iswalnum): Duplicate widechar tests from `glib'.
	(GDK_WLIBS): New variable.  Lists extra libraries needed to use
	widechar functions.
	* gtk-config.in (--libs): List $GDK_WLIBS, too.

Sat Oct 31 03:11:57 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.3
	
	* INSTALL:
	* NEWS:
	* README:
 	* gtk+.spec:
	* docs/gtk-config.1: updated for v1.1.3

	* Makefile.am
	* sanity_check
	* docs/Makefile.am: Includes new 'make release' as well as
	  'make sanity'.  Also handles html and text creation from html,
	  and puts them into the distribution

	* docs/Makefile.sgml: removed, similar functionality is now in 
	  the Makefile.am file

	* docs/.cvsignore: ignore html and text directories
	* docs/glib.texi: removed (now in glib dist)

Fri Oct 30 20:02:36 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtklist.c (gtk_list_remove_items_internal): 
	free undo_un/selection, unselect list_item before disconnect
	signal functions
	(gtk_list_destroy): removed. gtk_list_shutdown clears the list
	already
	(gtk_list_signal_item_select) (gtk_list_signal_item_deselect)
	(gtk_list_signal_item_toggle)	(gtk_list_signal_scroll_horizontal)
 	(gtk_list_signal_toggle_focus_row) (gtk_list_signal_select_all)
 	(gtk_list_signal_unselect_all) (gtk_list_signal_undo_selection)
 	(gtk_list_signal_start_selection) (gtk_list_signal_end_selection)
 	(gtk_list_signal_toggle_add_mode) (gtk_list_signal_scroll_vertical)
 	(gtk_list_signal_extend_selection) (gtk_list_signal_focus_lost):