@@ -1,3 +1,8 @@
+Wed Nov  4 02:02:07 1998  Lars Hamann  <lars@gtk.org>
+
+	* gtk/gtkclist.c (real_remove_row) (sync_selection): set correct
+	focus_row after a remove_row call.
+
 Sun Nov  1 21:00:06 GMT 1998  Austin Donnelly  <austin@greenend.org.uk>
 
 	* gtk/gtkoptionmenu.c
